--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head> 
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="script.js" />
   </head>
+  <button onclick="lightmode()">Light Mode</button>
   <body>
     <h1>
       Eesha's Personal Website
