--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head> 
     <meta charset="utf-8">
-    <title>Eesha's Personal Website</title>
+    <title>Eesha Kothari</title>
+    <link rel="icon" type="image/x-icon" href="black_rose_contrast.jpg">
     <link rel="stylesheet" href="dark.css" id="theme-link"/>
   </head>
   <body>
