--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </h2>
     <div class="transboxpre">
       <p>
-        Hi! My name is Eesha (she/her). I am a rising junior in high school who really loves robotics, electronics and coding! I live in the USA, with family in several states, as well as in India, Kenya, and Hungary!
+        Hi! My name is Eesha (she/her). I am a senior in high school who really loves robotics, electronics and coding! I live in the USA, with family in several states, as well as in India, Kenya, and Hungary!
       </p>
     </div>
     <hr>
