--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </h1>
 
     <div class="imgcontainer">
-      <img id="duck" src="https://www.motosha.com/files/preview/2000x1333/26024-yellow-duckling-portrait-black-background.jpg" alt="a duck"
+      <img id="duck" src="https://github.com/beepboopblorp/personal-website/blob/main/duckling-black-bg.jpg" alt="a duck"
       >
       <div class="textoverlay">
         <br>
@@ -178,3 +178,4 @@
   </body>
   <br> <br>
 </html>
+
