--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </h1>
 
     <div class="imgcontainer">
-      <img id="duck" src="https://github.com/beepboopblorp/personal-website/blob/main/duckling-black-bg.jpg" alt="a duck"
+      <img id="duck" src="duckling-black-bg.jpg" alt="a duck"
       >
       <div class="textoverlay">
         <br>
@@ -178,4 +178,5 @@
   </body>
   <br> <br>
 </html>
+
 
